initial_tables/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> schema
Rule 1     schema -> cine
Rule 2     schema -> schema cine
Rule 3     cine -> term LCP terms RCP
Rule 4     type -> NAME LP terms RP
Rule 5     term -> NAME
Rule 6     term -> REF term
Rule 7     term -> PRI term
Rule 8     term -> term LSP type RSP
Rule 9     terms -> term
Rule 10    terms -> terms COMMA
Rule 11    terms -> terms COMMA term

Terminals, with rules where they appear

COMMA                : 10 11
LCP                  : 3
LP                   : 4
LSP                  : 8
NAME                 : 4 5
PRI                  : 7
RCP                  : 3
REF                  : 6
RP                   : 4
RSP                  : 8
error                : 

Nonterminals, with rules where they appear

cine                 : 1 2
schema               : 2 0
term                 : 3 6 7 8 9 11
terms                : 3 4 10 11
type                 : 8

Parsing method: LALR

state 0

    (0) S' -> . schema
    (1) schema -> . cine
    (2) schema -> . schema cine
    (3) cine -> . term LCP terms RCP
    (5) term -> . NAME
    (6) term -> . REF term
    (7) term -> . PRI term
    (8) term -> . term LSP type RSP

    NAME            shift and go to state 2
    REF             shift and go to state 4
    PRI             shift and go to state 5

    cine                           shift and go to state 3
    schema                         shift and go to state 1
    term                           shift and go to state 6

state 1

    (0) S' -> schema .
    (2) schema -> schema . cine
    (3) cine -> . term LCP terms RCP
    (5) term -> . NAME
    (6) term -> . REF term
    (7) term -> . PRI term
    (8) term -> . term LSP type RSP

    NAME            shift and go to state 2
    REF             shift and go to state 4
    PRI             shift and go to state 5

    cine                           shift and go to state 7
    term                           shift and go to state 6

state 2

    (5) term -> NAME .

    LCP             reduce using rule 5 (term -> NAME .)
    LSP             reduce using rule 5 (term -> NAME .)
    RP              reduce using rule 5 (term -> NAME .)
    COMMA           reduce using rule 5 (term -> NAME .)
    RCP             reduce using rule 5 (term -> NAME .)


state 3

    (1) schema -> cine .

    NAME            reduce using rule 1 (schema -> cine .)
    REF             reduce using rule 1 (schema -> cine .)
    PRI             reduce using rule 1 (schema -> cine .)
    $end            reduce using rule 1 (schema -> cine .)


state 4

    (6) term -> REF . term
    (5) term -> . NAME
    (6) term -> . REF term
    (7) term -> . PRI term
    (8) term -> . term LSP type RSP

    NAME            shift and go to state 2
    REF             shift and go to state 4
    PRI             shift and go to state 5

    term                           shift and go to state 8

state 5

    (7) term -> PRI . term
    (5) term -> . NAME
    (6) term -> . REF term
    (7) term -> . PRI term
    (8) term -> . term LSP type RSP

    NAME            shift and go to state 2
    REF             shift and go to state 4
    PRI             shift and go to state 5

    term                           shift and go to state 9

state 6

    (3) cine -> term . LCP terms RCP
    (8) term -> term . LSP type RSP

    LCP             shift and go to state 10
    LSP             shift and go to state 11


state 7

    (2) schema -> schema cine .

    NAME            reduce using rule 2 (schema -> schema cine .)
    REF             reduce using rule 2 (schema -> schema cine .)
    PRI             reduce using rule 2 (schema -> schema cine .)
    $end            reduce using rule 2 (schema -> schema cine .)


state 8

    (6) term -> REF term .
    (8) term -> term . LSP type RSP

  ! shift/reduce conflict for LSP resolved as shift
    LCP             reduce using rule 6 (term -> REF term .)
    RP              reduce using rule 6 (term -> REF term .)
    COMMA           reduce using rule 6 (term -> REF term .)
    RCP             reduce using rule 6 (term -> REF term .)
    LSP             shift and go to state 11

  ! LSP             [ reduce using rule 6 (term -> REF term .) ]


state 9

    (7) term -> PRI term .
    (8) term -> term . LSP type RSP

  ! shift/reduce conflict for LSP resolved as shift
    LCP             reduce using rule 7 (term -> PRI term .)
    RP              reduce using rule 7 (term -> PRI term .)
    COMMA           reduce using rule 7 (term -> PRI term .)
    RCP             reduce using rule 7 (term -> PRI term .)
    LSP             shift and go to state 11

  ! LSP             [ reduce using rule 7 (term -> PRI term .) ]


state 10

    (3) cine -> term LCP . terms RCP
    (9) terms -> . term
    (10) terms -> . terms COMMA
    (11) terms -> . terms COMMA term
    (5) term -> . NAME
    (6) term -> . REF term
    (7) term -> . PRI term
    (8) term -> . term LSP type RSP

    NAME            shift and go to state 2
    REF             shift and go to state 4
    PRI             shift and go to state 5

    terms                          shift and go to state 12
    term                           shift and go to state 13

state 11

    (8) term -> term LSP . type RSP
    (4) type -> . NAME LP terms RP

    NAME            shift and go to state 14

    type                           shift and go to state 15

state 12

    (3) cine -> term LCP terms . RCP
    (10) terms -> terms . COMMA
    (11) terms -> terms . COMMA term

    RCP             shift and go to state 17
    COMMA           shift and go to state 16


state 13

    (9) terms -> term .
    (8) term -> term . LSP type RSP

    RP              reduce using rule 9 (terms -> term .)
    COMMA           reduce using rule 9 (terms -> term .)
    RCP             reduce using rule 9 (terms -> term .)
    LSP             shift and go to state 11


state 14

    (4) type -> NAME . LP terms RP

    LP              shift and go to state 18


state 15

    (8) term -> term LSP type . RSP

    RSP             shift and go to state 19


state 16

    (10) terms -> terms COMMA .
    (11) terms -> terms COMMA . term
    (5) term -> . NAME
    (6) term -> . REF term
    (7) term -> . PRI term
    (8) term -> . term LSP type RSP

    RP              reduce using rule 10 (terms -> terms COMMA .)
    COMMA           reduce using rule 10 (terms -> terms COMMA .)
    RCP             reduce using rule 10 (terms -> terms COMMA .)
    NAME            shift and go to state 2
    REF             shift and go to state 4
    PRI             shift and go to state 5

    term                           shift and go to state 20

state 17

    (3) cine -> term LCP terms RCP .

    NAME            reduce using rule 3 (cine -> term LCP terms RCP .)
    REF             reduce using rule 3 (cine -> term LCP terms RCP .)
    PRI             reduce using rule 3 (cine -> term LCP terms RCP .)
    $end            reduce using rule 3 (cine -> term LCP terms RCP .)


state 18

    (4) type -> NAME LP . terms RP
    (9) terms -> . term
    (10) terms -> . terms COMMA
    (11) terms -> . terms COMMA term
    (5) term -> . NAME
    (6) term -> . REF term
    (7) term -> . PRI term
    (8) term -> . term LSP type RSP

    NAME            shift and go to state 2
    REF             shift and go to state 4
    PRI             shift and go to state 5

    terms                          shift and go to state 21
    term                           shift and go to state 13

state 19

    (8) term -> term LSP type RSP .

    LCP             reduce using rule 8 (term -> term LSP type RSP .)
    LSP             reduce using rule 8 (term -> term LSP type RSP .)
    RP              reduce using rule 8 (term -> term LSP type RSP .)
    COMMA           reduce using rule 8 (term -> term LSP type RSP .)
    RCP             reduce using rule 8 (term -> term LSP type RSP .)


state 20

    (11) terms -> terms COMMA term .
    (8) term -> term . LSP type RSP

    RP              reduce using rule 11 (terms -> terms COMMA term .)
    COMMA           reduce using rule 11 (terms -> terms COMMA term .)
    RCP             reduce using rule 11 (terms -> terms COMMA term .)
    LSP             shift and go to state 11


state 21

    (4) type -> NAME LP terms . RP
    (10) terms -> terms . COMMA
    (11) terms -> terms . COMMA term

    RP              shift and go to state 22
    COMMA           shift and go to state 16


state 22

    (4) type -> NAME LP terms RP .

    RSP             reduce using rule 4 (type -> NAME LP terms RP .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for LSP in state 8 resolved as shift
WARNING: shift/reduce conflict for LSP in state 9 resolved as shift
